--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=1337 nodemon app.js",
-    "test": "NODE_ENV=testing mocha --timeout 15000"
+    "start": "PORT=1337 nodemon ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "async": "^2.4.1",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "~1.17.1",
+    "chart.js": "^2.6.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
@@ -18,12 +19,11 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
-    "mysql": "^2.14.1",
+    "mysql": "^2.13.0",
     "serve-favicon": "~2.4.2",
-    "validatorjs": "3.12.0"
+    "validatorjs": "^3.13.3"
   },
   "devDependencies": {
-    "mocha": "^3.5.0",
-    "supertest": "^3.0.0"
+    "mocha": "^3.4.2"
   }
 }
