--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=1337 nodemon app.js",
+    "start": "PORT=1337 nodemon ./bin/www",
     "test": "NODE_ENV=testing mocha --timeout 15000"
   },
   "dependencies": {
@@ -18,12 +18,12 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
-    "mysql": "^2.14.1",
+    "mysql": "^2.13.0",
     "serve-favicon": "~2.4.2",
-    "validatorjs": "3.12.0"
+    "validatorjs": "^3.13.3"
   },
   "devDependencies": {
-    "mocha": "^3.5.0",
+    "mocha": "^3.4.2",
     "supertest": "^3.0.0"
   }
 }
