--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=1337 nodemon ./bin/www",
-    "test": "NODE_ENV=testing mocha --timeout 15000"
+    "test": "NODE_ENV=testing mocha --timeout 15000",
+    "start": "forever start app.js",
+    "stop": "forever stopall"
   },
   "dependencies": {
     "async": "^2.4.1",
@@ -20,7 +21,8 @@
     "morgan": "~1.8.1",
     "mysql": "^2.13.0",
     "serve-favicon": "~2.4.2",
-    "validatorjs": "^3.13.3"
+    "validatorjs": "^3.13.3",
+    "forewer":"^0.15.3"
   },
   "devDependencies": {
     "mocha": "^3.4.2",
